# cpp-playarea

./: .gitignore
Diverses/GraphAlgorithms/: .clang-format  .clangd  CMakeLists.txt  README.md  main.cpp
Diverses/GraphAlgorithms/.nvim/: launch.json
Diverses/GraphAlgorithms/include/: DijkstraAlgorithm.hpp  PrismAlgorithm.hpp  Vertex.hpp  VertexGraphDrawer.hpp  VertexNeighbor.hpp  VertexWithNeighbors.hpp
Diverses/GraphAlgorithms/src/: DijkstraAlgorithm.cpp  PrismAlgorithm.cpp  Vertex.cpp  VertexGraphDrawer.cpp  VertexNeighbor.cpp  VertexWithNeighbors.cpp
Diverses/ML/: CMakeLists.txt  README.md  main.cpp
Diverses/ML/include/: ColorEnum.hpp  KNNPoint.hpp  XYGraphDrawer.hpp
Diverses/ML/src/: KNNPoint.cpp  XYGraphDrawer.cpp
Diverses/Sorts-And-Searches/: .clang-format  CMakeLists.txt  main.cpp
Diverses/Sorts-And-Searches/.nvim/: launch.json
Diverses/Sorts-And-Searches/include/: BinarySearch.hpp  BubbleSort.hpp  InsertionSort.hpp  QuickSort.hpp
Diverses/Sorts-And-Searches/src/: BinarySearch.cpp  BubbleSort.cpp
Diverses/Sorts-And-Searches/template/: BinarySearch.t.hpp  BubbleSort.t.hpp
Diverses/Tests/: .clang-format  .clangd  CMakeLists.txt  README.md  lib  main.cpp  vcpkg.json
Diverses/Tests/modules/calculations/: CMakeLists.txt  calculations.cpp  calculations.hpp
Diverses/Tests/modules/calculations2/: CMakeLists.txt  calculations2.cpp  calculations2.hpp
Diverses/Tests/tests/: CMakeLists.txt  test_calculations.cpp
HttpRequest/Boost/: vcpkg.json
HttpRequest/Boost/docs/: Dates.txt
HttpRequest/Boost/src/: main.cpp
HttpRequest/CppRequest/: vcpkg.json
HttpRequest/CppRequest/docs/: Dates.txt  Installations.md
HttpRequest/CppRequest/src/: main.cpp
